# retiroflow

./: .env.example  pyproject.toml  render.yaml  vercel.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useApi.ts
frontend/src/pages/: AITools.tsx  Bookings.tsx  Centers.tsx  Dashboard.tsx  Facilitators.tsx  Participants.tsx  Retreats.tsx  Reviews.tsx  Services.tsx
src/retiroflow/: __init__.py  ai.py  api.py  cli.py  database.py  demo_data.py  models.py  realtime.py  store.py
